@@ -10,6 +10,8 @@ What's New in Python 3.3.0 Beta 2?
 Core and Builtins
 -----------------
 
+- Issue #12834: Fix PyBuffer_ToContiguous() for non-contiguous arrays.
+
 - Issue #15456: Fix code __sizeof__ after #12399 change.
   Patch by Serhiy Storchaka.
 
